--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/images/chef-icon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- This makes your shared link show an image -->
-    <meta property="og:title" content="Chef Phoenix - Your AI Recipe Wizard!" />
-    <meta property="og:description" content="Turn your kitchen ingredients into magical recipes with AI." />
-    <meta property="og:image" content="https://aishwaryaghatole.github.io/chef-phoenix/preview.png" />
-    <meta property="og:url" content="https://aishwaryaghatole.github.io/chef-phoenix/" />
-    <meta property="og:type" content="website" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/images/chef-icon.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Twitter support (optional but cool) -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Chef Phoenix - Your AI Recipe Wizard!" />
-    <meta name="twitter:description" content="Turn your kitchen ingredients into magical recipes with AI." />
-    <meta name="twitter:image" content="https://yourdomain.com/preview.png" />
+  <!-- Shared link show an image -->
+  <meta property="og:title" content="Chef Phoenix - Your AI Recipe Wizard!" />
+  <meta property="og:description" content="Turn your kitchen ingredients into magical recipes with AI." />
+  <meta property="og:image" content="https://aishwaryaghatole.github.io/chef-phoenix/preview.png" />
+  <meta property="og:url" content="https://aishwaryaghatole.github.io/chef-phoenix/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter support -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Chef Phoenix - Your AI Recipe Wizard!" />
+  <meta name="twitter:description" content="Turn your kitchen ingredients into magical recipes with AI." />
+  <meta name="twitter:image" content="https://aishwaryaghatole.github.io/chef-phoenix/preview.png" />
 
     <title>Chef Phoenix</title>
   </head>
